--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 body {
-    /* font-family: 'Times New Roman', Times, serif; */
-    font-family: "Nanum Myeongjo", Georgia, serif;;
+    /* font-family: "Nanum Myeongjo", Georgia, serif; */
+    font-family: 'Prata', serif;
     background-color: #F9F5F3;
-  }
+}
+
 .first {
     background-image: url('../images/skincare5.jpg');
     background-size: cover;
@@ -10,35 +11,37 @@ body {
     background-clip: border-box;
     width: 100%;
     height: 600px;
-  }
+}
 
-  .second {
+.second {
     background-image: url('../images/skincare3.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-clip: border-box;
     width: 100%;
     height: 600px;
-  }
+}
 
-  .third {
+.third {
     background-image: url('../images/skincare2.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-clip: border-box;
     width: 100%;
     height: 600px;
-  }
+}
 
-  .container-first {
+.container-first {
     margin-bottom: -24px;
-  }
-  #company-services .icon-box-content h4 {
+}
+
+#company-services .icon-box-content h4 {
     color: #B2856E;
     font-weight: 400;
     font-size: 1.8rem;
-  }
-  .circle-pattern::after {
+}
+
+.circle-pattern::after {
     position: absolute;
     content: "";
     background-color: #EAE3DF;
@@ -48,53 +51,51 @@ body {
     height: 38px;
     border-radius: 50%;
     z-index: -1;
-  }
-  .icon-box-icon img {
+}
+
+.icon-box-icon img {
     color: #B2856E;
-  }
-  .tagline1 {
-    width: 48%; 
+}
+
+.tagline1 {
+    width: 48%;
     margin-left: 550px;
-  }
-  .tagline3 {
-    width: 50%; 
-   
-  }
-  #myCarousel p a {
+}
+
+.tagline3 {
+    width: 50%;
+
+}
+
+#myCarousel p a {
     background-color: #B2856E;
     border-color: #B2856E;
-  }
-  .wishlist i{
+}
+
+.wishlist i {
     font-size: 22px;
     color: black;
-  }
-  #newArrivals {
+}
+
+#newArrivals {
     margin-top: 160px;
-  }
-  #newArrivals .container .new, #latestBlogs .container .new {
+}
+
+#newArrivals .container .new,
+#latestBlogs .container .new {
     margin-top: -16px;
-  }
-  .first-col p, .second-col p{
-   border: 3px solid #B2856E;
-   border-radius: 2px;
-  }
+}
+
+.first-col p,
+.second-col p {
+    border: 3px solid #B2856E;
+    border-radius: 2px;
+}
 
 
-  /*slick*/
-
-
-  /*Who are we*/
-  /* #whoAreWe {
-    background-image: url(../images/horizontal-banner-cosmetic-product-with-jade-roller-gua-sha.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 500px;
-    width: 100%;
-    opacity: 0.5;
-  } */
-
-  #whoAreWe {
-    position: relative; 
+/*slick*/
+#whoAreWe {
+    position: relative;
     height: 600px;
     width: 100%;
     display: flex;
@@ -102,44 +103,63 @@ body {
     justify-content: center;
 }
 
-#whoAreWe::before {    
-      content: "";
-      background-image: url('../images/horizontal-banner-cosmetic-product-with-jade-roller-gua-sha.jpg');
-      background-size: cover;
-      position: absolute;
-      top: 0px;
-      right: 0px;
-      bottom: 0px;
-      left: 0px;
-      opacity: 0.75;
+#whoAreWe::before {
+    content: "";
+    background-image: url('../images/horizontal-banner-cosmetic-product-with-jade-roller-gua-sha.jpg');
+    background-size: cover;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    opacity: 0.75;
 }
 
 #whoAreWe .container h3 {
-  position: relative;
-  color: #ffffff;  
-  font-size: 4rem;
-  line-height: 0.9;
-  padding-top: 100px;
-  padding-bottom: 35px;
- 
+    font-family: 'Prata', serif;
+    position: relative;
+    color: #ffffff;
+    font-size: 4rem;
+    line-height: 0.9;
+    padding-top: 80px;
+    padding-bottom: 35px;
+    letter-spacing: 1px;
+
 }
-#whoAreWe .container h5{
+
+#whoAreWe .container h5 {
     position: relative;
     font-size: 15px;
 }
+
 #whoAreWe .container p {
     position: relative;
     text-align: justify;
     line-height: 1.9em;
+    overflow: hidden;
+    text-wrap: wrap;
+    word-wrap: break-word;
 }
+
 #whoAreWe .container button {
     position: relative;
     text-transform: uppercase;
     border: 1px solid gray;
 }
+
 #whoAreWe .container button:hover {
     background-color: #EAE3DF;
 }
+
 #latestBlogs .post-meta {
     font-size: 12px;
-  }
+}
+
+.post-title {
+    font-family: 'Prata', serif;
+    font-weight: 400;
+    color: #2F2E33;
+    line-height: 1.24;
+    letter-spacing: 0.8px;
+    font-size: 1.3rem;
+}
