--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,10 @@ body {
     width: 100%;
     height: 600px;
 }
+.carousel-inner img {
+    width: 100%;
+    height: 600px;
+  }
 
 .container-first {
     margin-bottom: -24px;
@@ -92,8 +96,50 @@ body {
     border-radius: 2px;
 }
 
+/*slick slider*/
+  /* .slick-list {
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 15px 0px 40px;
+  }
 
-/*slick*/
+  .slick-list .slick-slide {
+    font-size: 30px;
+    text-align: center;
+    padding: 40px 20px;
+    line-height: 2;
+    font-weight: 700;
+  }
+
+  .slick-arrow {
+    z-index: 1;
+    width: 70px;
+    height: 70px;
+    margin-top: -50px;
+  }
+
+  .slick-arrow:before {
+    font-size: 30px;
+  }
+
+  .slick-next {
+    right: 0;
+  }
+
+  .slick-prev {
+    left: 0;
+  }
+
+  .btn-wrap {
+    text-align: center;
+    width: 100%;
+  }
+
+  button.slick-disabled {
+    opacity: 0.6;
+  } */
+
+  /*Who are we css*/
 #whoAreWe {
     position: relative;
     height: 600px;
@@ -162,4 +208,15 @@ body {
     line-height: 1.24;
     letter-spacing: 0.8px;
     font-size: 1.3rem;
+}
+#openingHours table {
+    border-radius: 10px;
+    overflow: hidden;
+    background-color: #EAE3DF;
+    
+}
+#openingHours h4 {
+    color: #B2856E;
+    font-weight: 400;
+    font-size: 1.8rem;
 }
