--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -2,6 +2,10 @@ body {
     font-family: 'Prata', serif;
     background-color: #F9F5F3;
 }
+.wishlist i {
+    font-size: 22px;
+    color: black;
+}
 .carousel-inner img {
     width: 100%;
     height: 400px;
@@ -18,14 +22,36 @@ body {
     font-weight: bolder;
     font-size: 35px;
 }
-#chooseUs{
+#chooseUs {
+    padding-bottom: 130px;
+}
+#chooseUs .benefits{
+    height: 400px; 
     background-color: #EAE3DF;
 }
 .benefit {
     width: 22%;
     height: 200px;
     border-radius: 15px;
+    padding-top: 25px;
+    font-weight: bolder;
 }
+
 .benefit:not(:last-child) {
     margin-right: 50px;
+}
+#team .card:hover {
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+}
+
+#FAQs .container{
+    width: 75%;
+}
+#FAQs .item1 {
+    background-color: #F9F5F3;
+}
+#FAQs .accordion-button {
+    background-color: #F9F5F3;
+    /* background-color: #e9dfda; */
+    border-bottom: 1px solid rgb(193, 192, 192);
 }
